--- a/app/components/social-info/index.module.scss
+++ b/app/components/social-info/index.module.scss
@@ -20,6 +20,7 @@
     align-items: center;
     column-gap: 6px;
     svg {
+      display: block;
       width: 16px;
       height: 16px;
       font-size: 16px;
