--- a/app/components/person-info/index.module.scss
+++ b/app/components/person-info/index.module.scss
@@ -34,6 +34,7 @@
       align-items: center;
       column-gap: 8px;
       svg {
+        display: block;
         width: 16px;
         height: 16px;
         font-size: 16px;
